[gd_scene load_steps=8 format=3 uid="uid://dprc2l020lanb"]

[ext_resource type="Script" path="res://Scripts/UI/Dice_d6.gd" id="1_exly3"]
[ext_resource type="Texture2D" uid="uid://bd3otunaqvwox" path="res://Media/Dice/side_1_pip.png" id="2_0km21"]
[ext_resource type="Texture2D" uid="uid://cthuwy0p3pvdp" path="res://Media/Dice/side_2_pips.png" id="3_7tec3"]
[ext_resource type="Texture2D" uid="uid://bo6gj7o3glrf8" path="res://Media/Dice/side_3_pips.png" id="4_faara"]
[ext_resource type="Texture2D" uid="uid://b10yn4v17j2ys" path="res://Media/Dice/side_4_pips.png" id="5_w5sgo"]
[ext_resource type="Texture2D" uid="uid://vffmkrasa7xv" path="res://Media/Dice/side_5_pips.png" id="6_khv1n"]
[ext_resource type="Texture2D" uid="uid://de57mdny0iy0f" path="res://Media/Dice/side_6_pips.png" id="7_dxr0t"]

[node name="Dice_1_visual" type="Node2D"]
script = ExtResource("1_exly3")

[node name="Side1Pip" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_0km21")

[node name="Side2Pips" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("3_7tec3")

[node name="Side3Pips" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_faara")

[node name="Side4Pips" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_w5sgo")

[node name="Side5Pips" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_khv1n")

[node name="Side6Pips" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_dxr0t")

[node name="DiceLabel" type="Label" parent="."]
offset_left = -19.0
offset_top = 32.0
offset_right = 21.0
offset_bottom = 55.0
size_flags_horizontal = 4
size_flags_vertical = 1
text = "1"
horizontal_alignment = 1
vertical_alignment = 1
